HW3 add tabels and finish data manager